Replace Arrays.asList with List.of for modern Java syntax
- Replace all 52 instances of Arrays.asList with List.of
- Remove unused Arrays import, add List import
- More concise and type-safe (List.of creates immutable lists)